Fix sidebar wrap list text issue

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -164,7 +164,7 @@
   }
 
   li {
-    white-space: nowrap;
+    // white-space: nowrap;
   }
 
   a {
